--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
-  </tr>
+  <tr>   <td><input type="checkbox" /></td></tr>
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!🙌😊</h2>
