--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!🙌😊</h2>
 
+<h6>holaaa</h6>
 <script>
   // Initialization
   const boxes = Array.from(document.querySelectorAll("td"));
