--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <h6>holaaa</h6>
 <script>
-  // Initialization
+  // Initializationooooooooooooooooooooooonnnnnn
   const boxes = Array.from(document.querySelectorAll("td"));
   const inputs = Array.from(document.querySelectorAll("[type=checkbox]"));
   const rows = [1, 2, 3].map((n) =>
